This file documents the revision history for UFL::Phonebook.

0.23
        - Refactor common searching and results code to
          ::BaseController

0.22  Fri Oct 19 12:51:11 EDT 2007
        - Say "Not Available" instead of "Unknown" for search results

0.21  Thu Oct 18 19:41:42 EDT 2007
        - Add a few missing (mostly core) modules to Makefile.PL
        - Add tests of LDAP ACLs
        - Improve handling of environment-based authentication for
          REMOTE_USER on mod_fastcgi
        - ::Controller::Authentication: Rename configuration paramter
          for redirecting to private version from redirect_to to
          authenticated_uri
        - ::LDAP::Connection: Rewrite to avoid issues with incorrect
          file descriptors when running in FastCGI
        - ::LDAP::Connection: Use the Kerberos credential cache
          instead of a separate lock file to determine when to kinit
        - In /units/people, use stashed unit for page title instead of
          relying on a field that the person might not have

0.20  Fri Aug 24 18:04:29 EDT 2007
        - Rename from Phonebook to UFL::Phonebook
        - Switch to Catalyst::Plugin::ConfigLoader
        - Move actions from application to ::Controller::Root
        - Convert /end to Catalyst::Action::RenderView
        - Move controller-specific configuration into the controller
          namespaces
        - Rename ::Model::Organization to ::Model::Unit to match the
          rest of the application
        - Refactor ::Entry to use newer style Catalyst::Model::LDAP
        - Split view into HTML and vCard content types
        - Convert controllers to Chained actions
        - Remove ugly uri_for override
        - Move address-related packages out of the ::Entry namespace
        - Add address inflation for 'Emergency Contact Mailing
          Address'
        - Convert to Class::Accessor::Fast
        - 404 on invalid source in ::Controller::Search